# colombia-forecasting-desk

./: .gitignore  PROJECT_SPEC.md  README.md  main.py  pyproject.toml
colombia_forecasting_desk/: acceptance.py  analyst_leads.py  brief.py  candidates.py  cleaner.py  cluster.py  config_loader.py  cooccurrence_bundles.py  decision_records.py  dedupe.py  fetchers.py  forecastability.py  indicator_tension_cards.py  indicator_watch.py  legal_identity.py  legislative_reconciler.py  m2_ranker.py  m2_review_packet.py  m2_sampling_decisions.py  m3_case_file.py  m3_preflight_opportunities.py  manifest.py  market_pricing.py  models.py  observability.py  pipeline.py  procurement_leads.py  ranker.py  registry_changes.py  review_html.py  source_quality.py  stopwords_es.py  tagger.py  zona_franca_leads.py
config/: agent_policy.yaml  metasources.yaml
docs/: ADDING_METASOURCE.md  FINAL_OUTPUT_CONTRACT.md  LEGISLATIVE_RECONCILER_CONTRACT.md  M1_METASOURCE_PIPELINE.md  M3_CASE_FILE_CONTRACT.md  REVIEW_SURFACE.md  RUN_ARTIFACTS.md
forecasts/: forecast_log.jsonl
prompts/: daily_scout.md  evidence_pack.md  forecast_draft.md  question_selection.md  x_post.md
scripts/: check_artifact_parity.py  render_review.py  scaffold_m3_case_file.py  scan_metasources.py  validate_m3_case_file.py  write_m2_sampling_decisions.py  write_m3_preflight_opportunities.py
tests/: conftest.py  fetcher_helpers.py  test_acceptance.py  test_analyst_leads.py  test_artifact_parity.py  test_brief.py  test_candidates.py  test_cleaner.py  test_cluster.py  test_config_loader.py  test_cooccurrence_bundles.py  (+38 more)
(+33 files in other folders)
