[project]
name = "colombia-forecasting-desk"
version = "0.1.0"
description = "Agent-assisted forecasting desk for Colombian political, economic, and institutional events."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",      # fault-tolerant RSS parsing
    "httpx>=0.27",          # modern HTTP client with sane timeouts
    "beautifulsoup4>=4.12", # HTML parsing (uses stdlib html.parser backend)
    "PyYAML>=6.0",          # reads config/metasources.yaml
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["colombia_forecasting_desk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
